# tempcheck

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: container.yml  lint.yml  test.yml
docs/: architecture.md  getting-started.md  pr-body.md
docs/features/: daemon.md  mcp-server.md
docs/security/: audit-findings.md  threat-model.md
src/: app.rs  audit.rs  collector.rs  config.rs  daemon.rs  lib.rs  main.rs  storage.rs  web.rs
src/mcp/: server.rs
tests/: cli_test.rs
