[package]
name = "tempcheck"
version = "0.1.0"
edition = "2021"
description = "System temperature monitor with SQLite logging and MCP analysis tools"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
